<resources>
    <string name="fever_health_call_alert_message">헬스콜센터 운영시간은\n평일 09시 ~ 19시,\n토요일 09시 ~ 13시  이며\n일요일, 공휴일 휴무입니다.\n\n헬스콜센터로 연결하시겠습니까?</string>
    <string name="fever_health_no_alert_message">불편을 드려 죄송합니다.\n\n고객님의 정보가 아직 업데이트 되지 않았습니다. 나중에 다시 시도해 주세요.</string>
    <string name="health_call_center">15885814</string>
    <string name="app_name_kr">굿앤굿 어린이케어</string>
    <string name="app_name_hh_kr">현대해상 굿앤굿 어린이케어</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="popup_dialog_button_confirm">확&#160;&#160;&#160;&#160;&#160;&#160;인</string>
    <string name="popup_dialog_button_cancel">취&#160;&#160;&#160;&#160;&#160;&#160;소</string>
    <string name="popup_dialog_button_save">저&#160;&#160;&#160;&#160;&#160;&#160;장</string>
    <string name="popup_dialog_button_quit">종&#160;&#160;&#160;&#160;&#160;&#160;료</string>
    <string name="popup_dialog_button_move">이&#160;&#160;&#160;&#160;&#160;&#160;동</string>
    <string name="popup_dialog_button_change">변&#160;&#160;&#160;&#160;&#160;&#160;경</string>
    <string name="popup_dialog_button_complete">완&#160;&#160;&#160;&#160;&#160;&#160;료</string>
    <string name="popup_dialog_button_moveto">바로가기</string>
    <string name="popup_dialog_button_result">결과 보기</string>
    <string name="popup_dialog_data_error_title">데이터 오류</string>
    <string name="popup_dialog_data_error_content">일시적인 오류입니다.\n다시 한번 시도해 주세요.</string>
    <string name="popup_dialog_server_error_content">서버 데이터에 문제가 있습니다.\n다시 한번 시도해주시고\n문제가 지속될 경우\n회사로 문의해 주세요.</string>
    <string name="popup_dialog_netword_error_title">통신 오류</string>
    <string name="popup_dialog_netword_error_content">이동 통신망 또는 무선 네트워크\n접속이 연결되지 않았거나\n원활하지 않습니다.\n확인 후 다시 접속해 주세요.</string>
    <string name="popup_dialog_update_title">업데이트 안내</string>
    <string name="popup_dialog_update_content">더욱 향상된 서비스를 위한 쉬운방법!\n지금 바로 업데이트해 주세요.</string>
    <string name="popup_dialog_email_loing_error">존재하지 않는 이메일 계정입니다.</string>
    <string name="popup_dialog_a_type_title">안내</string>
    <string name="popup_dialog_growth_delete_content">에 측정된 정보를 삭제하시겠습니까?</string>
    <string name="popup_dialog_vaccination_delete_content">에 입력된 접종정보를 삭제하시겠습니까?</string>
    <string name="popup_dialog_vaccination_not_delete_content">삭제 할 정보가 없습니다.</string>
    <string name="popup_dialog_permission_content">권한을 허용하지 않으면 이용하실 수 없습니다.</string>
    <string name="popup_dialog_no_child_register">본 서비스는 자녀가 태어난 후 자녀의 이름과 생년월일 정보가 보험사에 등록되면 이용하실 수 있습니다.</string>
    <string name="popup_dialog_system_error_content">시스템 오류로 인하여 중단합니다.</string>
    <string name="popup_dialog_input_error_content">입력 데이터가 부족하여 중단합니다.</string>
    <string name="popup_dialog_drop_member_content">탈퇴한 회원입니다.</string>
    <string name="popup_dialog_write_info_content">정보기록에 실패하였습니다.</string>
    <string name="popup_dialog_session_content">로그인에 실패하였습니다.\n다시 시도해주시기 바랍니다.</string>
    <string name="popup_dialog_token_content">로그인에 실패하였습니다.\n다시 시도해주시기 바랍니다.</string>
    <string name="popup_dialog_chl_content">아이 등록에 실패하였습니다.\n다시 시도해주시기 바랍니다.</string>
    <string name="popup_dialog_invalid_id_content">sns 아이디가 다릅니다.</string>
    <string name="popup_dialog_auth_content">인증을 해제하시면 앱이 종료 되며\n정상적인 사용을 위해\n재인증을 진행하셔야 합니다.\n정말로 해제 하시겠습니까?</string>
    <string name="popup_dialog_auth_complete">인증이 해제 되었습니다.</string>
    <string name="popup_dialog_service_out_complete">정상적으로 탈퇴 되었습니다.</string>
    <string name="popup_dialog_name_error">이름을 입력해 주세요.</string>
    <string name="popup_dialog_name_error_1">이름은 한글, 영문만 입력 가능합니다.</string>
    <string name="popup_dialog_birthday_error">생년월일을 8자리로 입력해 주세요.</string>
    <string name="popup_dialog_certifi_num_error">인증번호를 입력하지 않았습니다.\n인증요청 후 전송된 번호 6자리를 입력해 주세요.</string>
    <string name="popup_dialog_certifi_num_match_error">인증번호가 일치하지 않습니다. 확인 후 다시 입력해주세요.</string>
    <string name="popup_dialog_certifi_confirm">인증되었습니다.</string>
    <string name="popup_dialog_certifi_not_remain">오늘 사용가능한 인증 횟수를 모두 사용하였습니다.</string>
    <string name="popup_dialog_phone_number_error">휴대폰 번호를 입력해 주세요.</string>
    <string name="popup_dialog_phone_number_error_1">휴대폰번호를 10~11자리를 입력해주세요.</string>
    <string name="popup_dialog_birth_year_error">출산예정일을 입력해 주세요.</string>
    <string name="popup_dialog_terms_error">약관에 동의해 주세요.</string>
    <string name="popup_dialog_certifi_confrim_error">SMS인증번호 인증이 완료되지 않았습니다. 확인 후 다시 시도해주세요.</string>
    <string name="popup_dialog_certifi_error">서비스 대상자가 아닙니다.\n현대해상 어린이콜센터로 연락 바랍니다. 1577-3416</string>
    <string name="popup_dialog_insured_person_guide">계약자의 스마트폰에 먼저 앱을 설치 하신 후 인증 번호를 확인하셔야인증가능합니다.</string>
    <string name="popup_dialog_uniq_num_guide">계약자의 앱  메인 화면 우측 상단\n자녀관리 메뉴  자녀리스트에서확인하실 수 있습니다.\n(설정 버튼 아래에 있는 화살표)</string>
    <string name="popup_dialog_contactor_complete">정회원 인증이 완료되었습니다.</string>
    <string name="popup_dialog_contactor_complete_1">아이디 생성 후 앱의 모든 기능을 사용하실 수 있습니다.</string>
    <string name="popup_dialog_contactor_complete_2">*마케팅 정보 앱 PUSH 수신 안내\n[현대해상 굿앤굿어린이케어] %1$s 마케팅\n정보 수신 동의 처리되었습니다.\n(PUSH 철회는 설정 화면에서 가능합니다.)</string>
    <string name="popup_dialog_contactor_complete_marcketing">굿앤굿 어린이케어 앱에</string>
    <string name="popup_dialog_contactor_complete_marcketing_1">가입해주셔서 감사합니다.</string>
    <string name="popup_dialog_contactor_complete_marcketing_2">*마케팅 정보 앱 PUSH 수신 안내\n[현대해상 굿앤굿어린이케어] %1$s 마케팅\n정보 수신 거부 처리되었습니다.\n(PUSH 동의는 설정 화면에서 가능합니다.)</string>
    <string name="popup_dialog_contactor_complete1"><![CDATA[<small><big><big>준회원 정보 입력이 완료되었습니다.</big></big></small><br/><small><big>아이디 생성 후 앱의 모든 기능을</big></small><br/><small><big>사용하실 수 있습니다.</small></big><br/><br/><br/><big><small><font color="#0097C9">준회원 이용 중</font></big></small><br/><big><small><font color="#0097C9">현대해상 굿앤굿어린이종합보험에 가입한다면?</font></big></small><br/><br/></big></small><font color="#727274">“홈 화면 → 메뉴 → 설정” 에서 “정회원 전환하기” 를 해주세요.</font></big></small>
<small><big><font color="#727274">건강 상담 등의 서비스를 받아 보실 수 있습니다.</font></big></small>]]></string>
    <string name="popup_dialog_contactor_complete1_1">가입이 완료되었습니다!</string>
    <string name="popup_dialog_contactor_complete1_1_1">준회원 정보 입력이 완료되었습니다!</string>
    <string name="popup_dialog_contactor_complete1_2">준회원 이용 중</string>
    <string name="popup_dialog_contactor_complete1_2_1">현대해상 굿앤굿어린이종합보험에 가입한다면?</string>
    <string name="popup_dialog_contactor_complete1_3">“홈 화면 → 메뉴 → 설정” 에서 “정회원 전환하기” 를 해주세요.\n건강 상담 등의 서비스를 받아 보실 수 있습니다.</string>
    <string name="popup_dialog_contactor_complete1_4">*마케팅 정보 앱 PUSH 수신 안내\n[현대해상 굿앤굿어린이케어] %1$s 마케팅\n정보 수신 %2$s 처리되었습니다.\n(PUSH 철회는 설정 화면에서 가능합니다.)</string>
    <string name="popup_dialog_contactor_complete1_5">[현대해상 굿앤굿어린이케어]%1$s 마케팅 PUSH 수신 %2$s되었습니다.</string>
    <string name="popup_dialog_contactor_banner1"><u>현대해상 굿앤굿어린이종합보험</u></string>
    <string name="popup_dialog_contactor_banner2">에 가입한다면?</string>
    <string name="popup_dialog_contactor_banner3">준회원에서 정회원 전환이 필요해요!</string>
    <string name="popup_dialog_contactor_banner4">전환 방법 : 홈 > 메뉴 > 환경설정 > 정회원 전환하기</string>
    <string name="popup_dialog_contactor_banner5"><u>정회원이 되면 어떤 혜택이 있나요?</u></string>
    <string name="popup_dialog_contactor_banner6">1. 보험에 가입된 아이(피보험자)에 따라 추가 등록 및 관리가 가능해요.</string>
    <string name="popup_dialog_contactor_banner7">2. 맞춤형 서비스 혜택을 받을 수 있습니다.</string>
    <string name="popup_dialog_contactor_banner8">임신 중: 임신기간 중 체중예측</string>
    <string name="popup_dialog_contactor_banner9">출산 후: 다이어트 프로그램 / 유행질병 정보 프로그램</string>
    <string name="popup_dialog_contactor_banner10">3. 궁금한 점이 생긴다면 언제든 무료 상담이 가능합니다.</string>
    <string name="popup_dialog_contactor_banner11">평일 09:00~19:00 / 토요일 09:00~13:00 / 일·공휴일</string>
    <string name="popup_dialog_contactor_complete2">준회원 이용 중\n현대해상 굿앤굿어린이종합보험에 가입한다면?\n\n홈 화면 → 메뉴 → 설정” 에서 “정회원 전환하기” 를 해주세요.\n건강 상담 등의 서비스를 받아 보실 수 있습니다.</string>
    <string name="popup_dialog_contactor_complete3"><![CDATA[감사합니다<br/><br/><font color="#0097C9">계약자 정보가 확인되었습니다.</font>]]></string>
    <string name="popup_dialog_contactor_complete4"><![CDATA[감사합니다<br/><br/><font color="#0097C9">정회원 전환이 완료 되었습니다.</font>]]></string>
    <string name="popup_dialog_already_join_content">고객님은 이미 가입된 아이디가 존재합니다. 로그인 페이지로 이동합니다.</string>
    <string name="popup_dialog_insured_person_complete">고객님은 피보험자(자녀) 서비스 대상이십니다.\n앱의 제한된 기능만을 사용하실 수 있습니다.</string>
    <string name="popup_dialog_id_complete">사용 가능한 아이디입니다.</string>
    <string name="popup_dialog_already_id">이미 사용중인 아이디입니다.</string>
    <string name="popup_dialog_mail_format_error">메일 형식에 맞지 않습니다.</string>
    <string name="popup_dialog_not_match_pwd">기존 비밀 번호가 동일하지 않습니다.\n다시 확인해주시기 바랍니다.</string>
    <string name="popup_dialog_invalid_pwd">비밀번호는 영문, 숫자, 특수문자가 모두 포함되도록 8자리 이상으로 설정하셔야 합니다.</string>
    <string name="popup_dialog_duplicate_id">아이디 중복 확인을 하셔야 합니다.</string>
    <string name="popup_dialog_login_id_desc">회원님의 아이디입니다.</string>
    <string name="popup_dialog_login_id_error">가입되어 있지 않거나\n잘못된 아이디 입니다.</string>
    <string name="popup_dialog_login_pwd_error">두 패스워드가 일치하지 않습니다.</string>
    <string name="popup_dialog_login_input_id">아이디를 입력해 주세요.</string>
    <string name="popup_dialog_login_input_pwd">비밀번호를 입력해 주세요.</string>
    <string name="popup_dialog_login_input_all">모든정보를 입력해 주세요.</string>
    <string name="popup_dialog_find_pwd_complete">임시 비밀번호가 발송 되었습니다.\n설정 -> 로그인 정보에서 비밀번호를 수정하실 수 있습니다.</string>
    <string name="popup_dialog_find_pwd_error">등록된 아이디가 없습니다.\n이메일을 확인해 주세요.</string>
    <string name="popup_dialog_empty_id">입력하신 번호로 가입된 아이디가 없습니다.</string>
    <string name="popup_dialog_login_error">아이디 또는 비밀번호가 잘못 되었습니다. 다시 입력해 주세요.</string>
    <string name="popup_dialog_switch_member_error">정회원 전환이 완료 되었습니다.\n로그인 화면으로 이동합니다.</string>
    <string name="popup_dialog_auth_pwd_change_error">비밀 번호가 동일하지 않습니다.\n다시 확인해주시기 바랍니다.</string>
    <string name="popup_dialog_change_complete">비밀번호 변경에 성공하였습니다.</string>
    <string name="popup_dialog_change_fail">비밀번호 변경에 실패하였습니다.\n반복적으로 실패할 경우 고객센터로 연락바랍니다.</string>
    <string name="popup_dialog_join_complete">아이디 생성이 완료되었습니다.\n메인화면으로 이동합니다.</string>
    <string name="popup_dialog_sign_error">가입하실수 없습니다. 다시 확인해 주세요.</string>
    <string name="popup_dialog_sign_error1">이미 가입된 부모 정보입니다.</string>
    <string name="popup_dialog_change_nick_complete">변경 내용이 저장되었습니다.</string>
    <string name="main_brn_txt_07">체중</string>
    <string name="main_brn_txt_08">운동</string>
    <string name="main_brn_txt_09">식사</string>
    <string name="main_brn_txt_10">혈압</string>
    <string name="main_brn_txt_11">혈당</string>
    <string name="setting_address_msg">고객님이 계신 지역의 체온이 38℃ 이상일 경우 알람을 드립니다. (시/군/구 단위)</string>
    <string name="register_address">등록된 지역 : </string>
    <string name="search_address">주소 검색</string>
    <string name="none">없음</string>
    <string name="growthhint2">입력해 주세요 (필수)</string>
    <string name="mother_health_reg_before_text">임신 중</string>
    <string name="mother_health_reg_after_text">출산 후</string>
    <string name="nowfever">현 재 체 온</string>
    <string name="fever_empty">체온을 입력해 주세요</string>
    <string name="measu_croise">전용 체온계로 측정</string>
    <string name="txt_croise">전용 체온계와 호환됩니다.\n(체온계 A/S 문의 및 제품상담 : 031-201-7707)</string>
    <string name="fever_check_time">체 온 측 정 시 간</string>
    <string name="splash_permission_dlg_title">앱 접근권한 안내</string>
    <string name="splash_permission_dlg_text1">앱에서 사용하는 접근권한에 대하여 아래와 같이 안내해 드립니다. 접근권한은 필수적 접근권한과 선택적 접근권한으로 나누어지며, 선택적 접근권한의 경우 허용에 동의하지 않으셔도 앱 사용이 가능합니다.</string>
    <string name="splash_permission_content1">▣ 필수적 접근권한</string>
    <string name="splash_permission_content2">위치 (지역별 체온 표시)</string>
    <string name="splash_permission_content3">▣ 선택적 접근권한</string>
    <string name="splash_permission_content4">구글 피트니스 걸음 수 (걸음 수 카운트)\n사진첩 및 카메라 (아이사진,식사 사진 등록)\n전화(콜센터 연결)\n블루투스 (체중계 연동)\n마이크 (체온계 연동)</string>
</resources>