<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_25_dp"
        android:textColor="@color/colorBlack"
        android:fontFamily="@font/hi_maum_r"
        android:textSize="@dimen/_20_dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:text="@string/splash_permission_dlg_title"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlack"
        android:fontFamily="@font/hi_maum_r"
        android:textSize="@dimen/_15_dp"
        android:text="@string/splash_permission_dlg_text1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorMain"
        android:fontFamily="@font/hi_maum_r"
        android:textSize="@dimen/_15_dp"
        android:text="@string/splash_permission_content1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textColor="@color/colorBlack"
        android:fontFamily="@font/hi_maum_r"
        android:textSize="@dimen/_15_dp"
        android:text="@string/splash_permission_content2"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorMain"
        android:fontFamily="@font/hi_maum_r"
        android:textSize="@dimen/_15_dp"
        android:text="@string/splash_permission_content3"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textColor="@color/colorBlack"
        android:fontFamily="@font/hi_maum_r"
        android:textSize="@dimen/_15_dp"
        android:text="@string/splash_permission_content4"/>


</LinearLayout>
