<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/root_view"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include android:id="@+id/top" layout="@layout/common_back_top_sub_m" />

    <LinearLayout
        android:id="@+id/radioGroup2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_47_dp"
        android:background="@color/color_FB8AD3"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal">

                <TextView
                    android:id="@+id/btn_mom_before"
                    android:layout_width="@dimen/_110_dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/underline_mother"
                    android:layout_weight="1"
                    android:layout_marginLeft="@dimen/_40_dp"
                    android:layout_marginRight="@dimen/_40_dp"
                    android:text="@string/mother_health_reg_before_text"
                    android:gravity="center_vertical"
                    android:textColor="@color/mother_btn_color"
                    android:textAlignment="center"
                    android:textSize="@dimen/px_46"
                    android:textStyle="bold"
                    android:fontFamily="@font/hi_gothic_m" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal">

                <TextView
                    android:id="@+id/btn_mom_after"
                    android:layout_width="@dimen/_110_dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginLeft="@dimen/_40_dp"
                    android:layout_marginRight="@dimen/_40_dp"
                    android:textColor="@color/mother_btn_color"
                    android:text="@string/mother_health_reg_after_text"
                    android:textAlignment="center"
                    android:gravity="center_vertical"
                    android:textStyle="bold"
                    android:textSize="@dimen/px_46"
                    android:fontFamily="@font/hi_gothic_m" />


        </LinearLayout>
    </LinearLayout>
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/category1"
                    android:layout_width="@dimen/_80_dp"
                    android:layout_height="@dimen/_40_dp"
                    android:button="@null"
                    android:fontFamily="@font/hi_maum_r"
                    android:textAlignment="center"
                    android:textColor="@color/radio_tipbtn_color"
                    android:text="@string/main_brn_txt_07"/>
                <RadioButton
                    android:id="@+id/category2"
                    android:layout_width="@dimen/_80_dp"
                    android:layout_height="@dimen/_40_dp"
                    android:button="@null"
                    android:fontFamily="@font/hi_maum_r"
                    android:textColor="@color/radio_tipbtn_color"
                    android:textAlignment="center"
                    android:text="@string/main_brn_txt_08"/>
                <RadioButton
                    android:id="@+id/category3"
                    android:layout_width="@dimen/_80_dp"
                    android:layout_height="@dimen/_40_dp"
                    android:button="@null"
                    android:fontFamily="@font/hi_maum_r"
                    android:textColor="@color/radio_tipbtn_color"
                    android:textAlignment="center"
                    android:text="@string/main_brn_txt_09"/>
                <RadioButton
                    android:id="@+id/category4"
                    android:layout_width="@dimen/_80_dp"
                    android:layout_height="@dimen/_40_dp"
                    android:button="@null"
                    android:fontFamily="@font/hi_maum_r"
                    android:textColor="@color/radio_tipbtn_color"
                    android:textAlignment="center"
                    android:text="@string/main_brn_txt_10"/>
                <RadioButton
                    android:id="@+id/category5"
                    android:layout_width="@dimen/_80_dp"
                    android:layout_height="@dimen/_40_dp"
                    android:button="@null"
                    android:fontFamily="@font/hi_maum_r"
                    android:textColor="@color/radio_tipbtn_color"
                    android:textAlignment="center"
                    android:text="@string/main_brn_txt_11"/>

            </RadioGroup>


        </LinearLayout>

    </HorizontalScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#D7D7D9" />




    <WebView
        android:id="@+id/mom_web_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbarStyle="outsideOverlay" />
</LinearLayout>