<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/common_back_top"
        layout="@layout/common_back_top" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/common_back_top"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_20_dp"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="5sp"
        android:padding="@dimen/_20_dp"
        android:textColor="#888888"
        android:textSize="15sp"
        tools:text="@string/setting_address_msg" />


    <Button
        android:id="@+id/btn_save_address"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_46_dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/bg_white"
        android:fontFamily="@font/hi_gothic_b"
        android:text="@string/popup_dialog_button_save"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_16_dp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView15"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="@dimen/_50_dp"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/_40_dp"
        android:paddingRight="@dimen/_40_dp">


        <TextView
            android:id="@+id/btn_search_address"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40_dp"
            android:layout_weight="1"
            android:fontFamily="@font/hi_gothic_m"
            android:gravity="center_vertical"
            android:lineSpacingExtra="@dimen/_16_dp"
            android:text="@string/search_address"
            android:textColor="@color/txt_dark_lithg"
            android:textColorHint="#dedede"
            android:textSize="@dimen/_15_dp" />

        <ImageView
            android:id="@+id/gps_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20_dp"
            android:adjustViewBounds="true"
            android:src="@drawable/icon_gps" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout2"
        android:layout_marginTop="21dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_40_dp"
            android:layout_below="@+id/linearLayout2"
            android:fontFamily="@font/hi_gothic_b"
            android:gravity="left|center"
            android:paddingLeft="@dimen/_40_dp"
            android:paddingRight="@dimen/_5_dp"
            android:text="@string/register_address"
            android:textColor="@color/txt_dark_bold"
            android:textSize="@dimen/_16_dp" />

        <TextView
            android:id="@+id/tv_address_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/hi_gothic_b"
            android:gravity="left|center"
            android:text="@string/none"
            android:textSize="@dimen/_16_dp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout7"
        android:padding="@dimen/_20_dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="#ffffff"
            android:lineSpacingExtra="0sp"
            android:background="@drawable/draw_temper_confirm_btn"
            tools:text="저장"
            />

    </LinearLayout>



</RelativeLayout>
